--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <label>Name:<input type="text" name="name" required></label><br>
 <label>Email:<input type="text" name="email" required></label><br>
 <label>Phone:<input type="text" name="phone" required></label><br>
+<label>Department:<input type="text" name="department" required></label><br>
 </form>
 </body>
 </html>
