--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <label>Email:<input type="text" name="email" required></label><br>
 <label>Phone:<input type="text" name="phone" required></label><br>
 <label>Department:<input type="text" name="department" required></label><br>
+<label>Section:<input type="text" name="section" required></label><br>
 </form>
 </body>
 </html>
